# putn

./: README.md
src/putn/putn_gpr/: .travis.yml  CMakeLists.txt  package.xml
src/putn/putn_gpr/config/: .~lock.train_data.txt#  data20220115.txt  hyperparam.txt  test_data.txt  train_data.txt
src/putn/putn_gpr/include/gaussian_process_regression/: gaussian_process_regression.h  gaussian_process_regression.hxx
src/putn/putn_gpr/launch/: gpr_path.launch
src/putn/putn_gpr/src/: gpr_path.cpp
src/putn/putn_launch/: CMakeLists.txt  package.xml
src/putn/putn_launch/launch/: bringup.launch  simulation.launch
src/putn/putn_launch/rviz_config/: playbag.rviz  simulation.rviz
src/putn/putn_map/: CMakeLists.txt  package.xml
src/putn/putn_map/launch/: map1.launch  map2.launch
src/putn/putn_map/map1/: model-1_4.sdf  model.config
src/putn/putn_map/map1/materials/scripts/: map1.material
src/putn/putn_map/map1/meshes/: map1.dae
src/putn/putn_map/map2/: model-1_4.sdf  model.config
src/putn/putn_map/map2/materials/scripts/: map2.material
src/putn/putn_map/map2/meshes/: map2.dae
src/putn/putn_map/worlds/: map1.world  map2.world
src/putn/putn_mpc/: CMakeLists.txt  package.xml
src/putn/putn_mpc/scripts/: MPC.py  controller.py  local_planner.py
src/putn/putn_planning/: CMakeLists.txt  package.xml
src/putn/putn_planning/config/for_real_scenarios/: arch_bridge.yaml  bridge.yaml  flat_bridge.yaml  forest.yaml  general.yaml
src/putn/putn_planning/config/for_simulation/: map1.yaml  map2.yaml
src/putn/putn_planning/include/: PUTN_classes.h  PUTN_planner.h  PUTN_vis.h
src/putn/putn_planning/src/: PUTN_classes.cpp  PUTN_planner.cpp  PUTN_vis.cpp  global_planning_node.cpp  local_obs.cpp
src/putn/putn_rviz_plugins/src/: multi_probmap_display.h
src/putn/putn_waypoint_generator/src/: waypoint_generator.cpp
src/scout_simulator/: README.md
src/scout_simulator/scout_control/: CMakeLists.txt  package.xml
src/scout_simulator/scout_control/config/: scout2_control.yaml  scout_mini_control.yaml
src/scout_simulator/scout_description/: CMakeLists.txt
src/scout_simulator/scout_description/launch/: display_mini_models.launch  display_scout_mini.launch  display_scout_v2.launch  gazebo.launch  scout_mini_stock.launch  scout_v2_stock.launch
src/scout_simulator/scout_description/meshes/: 1_Link.STL  2_Link.STL  3_Link.STL  4_Link.STL  base_link_full.dae  wheel_type1.dae  wheel_type2.dae
src/scout_simulator/scout_description/rviz/: model_display.rviz  navigation.rviz  scout_mini_model_display.rviz
src/scout_simulator/scout_description/urdf/: mini.xacro  scout_mini.gazebo  scout_mini.urdf  scout_mini.xacro  scout_mini_wheel_1.xacro  scout_mini_wheel_2.xacro  scout_mini_wheel_3.xacro  scout_mini_wheel_4.xacro  scout_v2.gazebo  scout_v2.xacro  scout_wheel.gazebo  scout_wheel_type1.xacro  scout_wheel_type2.xacro
src/scout_simulator/scout_gazebo_sim/: CHANGELOG.md  CMakeLists.txt  package.xml
src/scout_simulator/scout_gazebo_sim/config/: scout_v2_control.yaml
src/scout_simulator/scout_gazebo_sim/include/scout_gazebo/: scout_skid_steer.hpp
src/scout_simulator/scout_gazebo_sim/launch/: scout_empty_world.launch  scout_mini_empty_world.launch  scout_mini_playpen.launch  scout_v2_playpen.launch  spawn_scout_mini.launch  spawn_scout_v2.launch
src/scout_simulator/scout_gazebo_sim/src/: scout_skid_steer.cpp  scout_skid_steer_controller.cpp
src/scout_simulator/scout_gazebo_sim/worlds/: weston_robot_empty.world
